Adds task for sending newsletter and getting a user's favorites
